<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">calculator</string>

    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>

    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_2">2</string>

    <string name="_1">1</string>

    <string name="button11">+</string>
    <string name="button12">-</string>
    <string name="button13">*</string>
    <string name="button14">/</string>
    <string name="button15">=</string>
    <string name="ac">AC</string>
    <string name="button16">.</string>
</resources>
