<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="5"
    android:columnCount="4">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:textSize="50sp"
        android:id="@+id/textResult"
        android:layout_columnSpan="4"
        />

    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"/>
    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2"/>
    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_3"/>
    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_4"/>
    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5"/>
    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_6"/>
    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_7"/>
    <Button android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/_8"/>
    <Button android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/_9"/>
    <Button android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/_0"/>
    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button11"/>
    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button12"/>
    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button13"/>
    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button14"/>
    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button15"/>
    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ac"/>
    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button16"/>




</GridLayout>
